# BouillonBird

./: BouillonBird.cabal  CHANGELOG.md  README.md
app/: Bitboards.hs  BouillonBird.hs
app/BoardRepresentation/: Bitboards.hs  LegalMoves.hs  Moves.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
