cabal-version:      2.4
name:               BouillonBird
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:
Chess bot written in Haskell.

-- A longer description of the package.
-- description:
Chess bot with associated GUI.

-- A URL where users can report bugs.
-- bug-reports:
lmao

-- The license under which the package is released.
-- license:
author:             Athan Massouras
maintainer:         amassouras@berkeley.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable BouillonBird
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
